--- a/styles.css
+++ b/styles.css
@@ -449,9 +449,9 @@ button:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    background: #ffffff50; /* Fondo semi-transparente */
+    background: #2c2c2c97; /* Fondo semi-transparente */
     backdrop-filter: blur(8px); /* Efecto de desenfoque */
-    z-index: 9999;
+    z-index: 1000000;
     justify-content: center; /* Centrar el contenido horizontalmente */
     align-items: center; /* Centrar el contenido verticalmente */
 }
