--- a/styles.css
+++ b/styles.css
@@ -1175,13 +1175,21 @@ footer > a:hover{
     border-radius: 10px;
     font-size: 1.2rem;
     padding: .2rem;
-    font-weight: 600;
+}
+
+#titleCruzDelSur > span{
+    font-weight: 600 !important;
 }
 
 #titleAndreani{
     background-color: white;
     border: 2px dashed #fc522c;
     border-radius: 10px;
+    font-weight: 600;
+}
+
+#numeroDeEnvio{
+    font-weight: 600;
 }
 
 #titleAndesmar{
