--- a/styles.css
+++ b/styles.css
@@ -3559,27 +3559,17 @@ div .form-check {
 /* FIN TRANSPORTE EN TABLAS */
 
 #porcentajes {
-    border: dashed 2px cornflowerblue;
-    background: #f9f9f9; 
-    padding: 10px; 
-    border-radius: 12px; 
-}
-
-.percentage-card {
-    font-weight: 600; 
-    padding: 10px 15px; 
+    border: 1px solid #b0b0b0; 
+    background: whitesmoke;
+    padding: 12px 20px; 
     border-radius: 10px; 
+    color: #333; 
+    font-weight: 500; 
     display: flex; 
-    align-items: center; 
-    transition: background-color 0.3s, transform 0.3s; 
-    font-size: 0.95em; 
-    margin: 5px 0; 
-}
-
-.percentage-card:hover {
-    background-color: rgba(0, 0, 0, 0.08); 
+    align-items: center;
+    justify-content: center; 
     cursor: pointer;
-    transform: translateY(-2px); 
+    transition: all 0.3s ease; 
 }
 
 #andreaniPorcentaje {
@@ -3590,10 +3580,6 @@ div .form-check {
 #andesmarPorcentaje {
     color: #3498db; 
     font-weight: 700; 
-}
-
-#porcentajes:hover {
-    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
 }
 
 .icon-state-ios{
@@ -5270,3 +5256,108 @@ input[disabled] {
     flex-direction: column;
 }
 
+.macos-button-porcentaje {
+    position: fixed;
+    bottom: 70px;
+    right: 65px;
+    border: 1px solid #a0a0a0;
+    background-color: whitesmoke;
+    border-radius: 12px;
+    padding: 10px 20px;
+    color: #333;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    z-index: 100000;
+}
+
+#badge-danger-porcentaje {
+    padding: 10px;
+    border-radius: 10px;
+    background: linear-gradient(to bottom, #ff5f5f, #d9534f);
+    color: whitesmoke;
+    font-size: 14px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    border: 1px solid #d43f3a; 
+    font-weight: bold;
+    text-align: center;
+    display: inline-block;
+    transition: background 0.3s ease; 
+}
+
+.percentage-card {
+    background: linear-gradient(to bottom, #f0f0f0, #d0d0d0);
+    border: 1px solid #d0d0d0;
+    border-radius: 12px;
+    padding: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    color: #333;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: background 0.3s ease;
+    margin-bottom: 10px;
+}
+
+.conteo{
+    margin-top: -20px;
+}
+
+.percentage-card:nth-child(1):hover {
+    background: linear-gradient(to bottom, #ffffff, rgba(220, 53, 69, 0.7)); /* Blanco a rojo clarito */
+}
+
+.percentage-card:nth-child(2):hover {
+    background: linear-gradient(to bottom, #ffffff, rgba(0, 123, 255, 0.7)); /* Blanco a azul clarito */
+}
+
+.percentage-card:nth-child(3):hover {
+    background: linear-gradient(to bottom, #ffffff, rgba(0, 51, 102, 0.7)); /* Blanco a azul más oscuro */
+}
+
+.pie-chart {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: conic-gradient(
+        var(--color) calc(var(--percentage) * 1%),
+        #e0e0e0 0
+    );
+    box-shadow: 0 0px 16px rgba(0, 0, 0, 0.2);
+    margin: 15px auto;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.pie-chart:hover {
+    transform: scale(1.1);
+    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25);
+}
+
+.pie-chart::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 60%;
+    height: 60%;
+    background: cornsilk;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: inset 0 4px 8px rgba(0, 0, 0, 0.1);
+    border: 2px solid #f0f0f0;
+}
+
+.text-dark-blue{
+    color: #003366;
+}
+
+img.gray-filter {
+    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(50%) contrast(20%);
+}
