--- a/styles.css
+++ b/styles.css
@@ -5359,6 +5359,7 @@ input[disabled] {
 }
 
 img.gray-filter {
+    width: auto;
     filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(50%) contrast(20%);
 }
 
