--- a/styles.css
+++ b/styles.css
@@ -5363,3 +5363,12 @@ img.gray-filter {
     filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(50%) contrast(20%);
 }
 
+.estadisticas-header {
+    text-align: center;
+    font-size: 1rem;
+    color: grey;
+    border-radius: 12px;
+    padding: 10px 20px;
+    margin-bottom: -20px;
+}
+
