--- a/styles.css
+++ b/styles.css
@@ -2793,14 +2793,13 @@ div.card-body > p > i{
 
 .numeroDeEnvioGeneradoBNA {
     font-family: "Roboto", sans-serif;
-    margin-bottom: 5px !important;
     text-align: center;
     color: #2c3e50; 
+    margin-bottom: 0px;
     background-color: #ecf0f1; 
     border: 1px solid #bdc3c7; 
     font-weight: 900 !important;
     padding: 12px 16px; 
-    border-radius: 12px; 
     box-shadow: 0 0px 8px rgba(0, 0, 0, 0.1); 
     transition: background-color 0.3s, box-shadow 0.3s; 
 }
