--- a/styles.css
+++ b/styles.css
@@ -3693,33 +3693,35 @@ div .form-check {
 }
 
 .carrito {
-    display: flex;
-    align-items: center;
-    background-color: #ffebee;
+
+    text-align: center;
+    background: linear-gradient(to bottom, #ffe4e3, white);
     color: #c62828; 
     padding: 12px 16px;
-    border: 1px solid #ef5350; 
-    border-radius: 10px; 
+    border-top: 2px solid #ef5350; 
+    border-radius: 10px 10px 0 0; 
     margin: 8px 0;
+    margin-bottom: -10px;
+    font-size: small;
     font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
     font-weight: 600;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-top: 0;
 }
 
 .puntos {
-    display: flex;
-    align-items: center;
+    text-align: center;
+    font-size: small;
+    background: linear-gradient(to bottom, #deffa1, white);
     background-color: #deffa1;
     color: green; 
     padding: 12px 16px;
-    border: 1px solid green; 
-    border-radius: 10px; 
+    border-top: 2px solid green; 
+    border-radius: 10px 10px 0 0; 
     margin: 8px 0;
+    margin-bottom: -10px;
     font-size: small;
     font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
     font-weight: 600;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-top: 0;
 }
 
