--- a/styles.css
+++ b/styles.css
@@ -2392,7 +2392,19 @@ div.card-body > p > i{
     color: white;
     display: flex; 
     align-items: center; 
+    text-align: center;
     justify-content: center;
+}
+
+.em-circle-state-time::before {
+    content: "\f017"; 
+    font-family: 'Font Awesome 5 Free'; 
+    position: absolute;
+    left: 10px; 
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 1.2em;
+    color: white;
 }
 
 .em-circle-state-time-facturado {
@@ -2409,6 +2421,17 @@ div.card-body > p > i{
     display: flex; 
     align-items: center; 
     justify-content: center;
+}
+
+.em-circle-state-time-facturado::before {
+    content: ""; 
+    font-family: 'Font Awesome 5 Free'; 
+    position: absolute;
+    left: 10px; 
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 1.2em;
+    color: white;
 }
 
 .em-circle-state-time-cancelado {
@@ -3784,9 +3807,8 @@ div .form-check {
 }
 
 .carrito {
-
     text-align: center;
-    background: linear-gradient(to bottom, #ffe4e3, rgba(255, 255, 255, 0));
+    background: linear-gradient(to bottom, #ffe4e0, #ffe4e9);
     color: #c62828; 
     padding: 12px 16px;
     border-top: 2px solid #ef5350; 
@@ -3797,6 +3819,7 @@ div .form-check {
     font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
     font-weight: 600;
     margin-top: 0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.150); 
 }
 
 .puntos {
@@ -3814,6 +3837,7 @@ div .form-check {
     font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
     font-weight: 600;
     margin-top: 0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.150); 
 }
 
 .puntos-icon {
